Bugfix: Do not let long text break the layout.

--- a/Succinct.colloquyStyle/Contents/Resources/sass/components/_elements.scss
+++ b/Succinct.colloquyStyle/Contents/Resources/sass/components/_elements.scss
@@ -43,6 +43,8 @@
 %content {
   /* Force the content as wide as possible. */
   width: 100%;
+  white-space: normal;
+  word-wrap: break-word;
 }
 
 %timestamp {
